made second block

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,4 +6,4 @@ html(lang="en")
     .promo-shadow
       video(src="../img/Pills.mp4" autoplay="autoplay"  loop width="1400"  class="promo-video") 
     include includes/promo.pug
-  
+    include includes/sostav.pug
