--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,8 +18,12 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 1200px;
-  height: 680px;
+  left: 0;
+  top: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
   z-index: -1;
   opacity: 0.1;
 }
@@ -53,7 +57,7 @@
 }
 
 .promo-info {
-  margin-top: 150px;
+  margin-top: 260px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -94,6 +98,14 @@
   color: #ffffff;
   border-radius: 15px;
   width: 500px;
+  -webkit-transition: 0.30s;
+  transition: 0.30s;
+}
+
+.promo-btn:hover {
+  background-color: #BC9CFF;
+  -webkit-transition: 0.30s;
+  transition: 0.30s;
 }
 
 .container {
@@ -103,6 +115,107 @@
 
 body {
   background-color: #141414;
+}
+
+.sostav {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.sostav-btn {
+  margin-top: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.sostav-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.sostav-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.sostav-item {
+  cursor: pointer;
+  margin-top: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 30px;
+  background-color: #BC9CFF;
+  border-radius: 50px;
+  -webkit-transition: 0.30s;
+  transition: 0.30s;
+}
+
+.sostav-item:hover {
+  background-color: #6FCF97;
+  -webkit-transition: 0.30s;
+  transition: 0.30s;
+}
+
+.sostav-item__img {
+  width: 120px;
+  height: 120px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
+.sostav-item__name {
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 15px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.sostav-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+section {
+  margin-top: 300px;
+  background-color: #0b0b0c;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
