--- a/src/sass/blocks/_promo.sass
+++ b/src/sass/blocks/_promo.sass
@@ -7,8 +7,12 @@
     position: absolute
     background-color: black
     display: flex
-    width: 1200px
-    height: 680px
+    left: 0
+    top: 0
+    min-width: 100%
+    min-height: 100%
+    width: auto
+    height: auto
     z-index: -1
     opacity: 0.1
   &-video
@@ -32,7 +36,7 @@
     width: 100%
     padding: 25px
   &-info
-    margin-top: 150px
+    margin-top: 260px
     display: flex
     justify-content: space-between
     align-items: center
@@ -59,3 +63,7 @@
     color: $white
     border-radius: 15px
     width: 500px
+    transition: 0.30s
+    &:hover
+      background-color: $purple
+      transition: 0.30s
