--- a/src/css/style.css
+++ b/src/css/style.css
@@ -122,6 +122,11 @@ body {
   padding-bottom: 100px;
 }
 
+.sostav-section {
+  margin-top: 300px;
+  background-color: #0b0b0c;
+}
+
 .sostav-btn {
   margin-top: 60px;
   display: -webkit-box;
@@ -211,11 +216,6 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-section {
-  margin-top: 300px;
-  background-color: #0b0b0c;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
