--- a/src/sass/blocks/_sostav.sass
+++ b/src/sass/blocks/_sostav.sass
@@ -1,6 +1,9 @@
 .sostav
   padding-top: 100px
   padding-bottom: 100px
+  &-section
+    margin-top: 300px
+    background-color: #0b0b0c
   &-btn
     margin-top: 60px
     display: flex
@@ -42,7 +45,3 @@
     flex-direction: column
     align-items: center
     justify-content: center
-
-section
-  margin-top: 300px
-  background-color: #0b0b0c
