add feedback (slider) block

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -7,3 +7,6 @@ html(lang="en")
       video(src="../img/Pills.mp4" autoplay="autoplay"  loop width="1400"  class="promo-video") 
     include includes/promo.pug
     include includes/sostav.pug
+    include includes/feedback.pug
+    script(src="https://unpkg.com/swiper@7/swiper-bundle.min.js") 
+    script(src="../js/slider.js")
