--- a/src/sass/blocks/_promo.sass
+++ b/src/sass/blocks/_promo.sass
@@ -30,6 +30,7 @@
     font-weight: bold
     font-size: 25px
     position: fixed
+    z-index: 100
     background-color: $purple
     display: flex
     justify-content: center
@@ -59,7 +60,7 @@
     text-transform: uppercase
     font-size: 20px
     font-weight: bold
-    background-color: $green
+    background-color: $btn
     color: $white
     border-radius: 15px
     width: 500px
