--- a/src/css/style.css
+++ b/src/css/style.css
@@ -45,7 +45,8 @@
   font-weight: bold;
   font-size: 25px;
   position: fixed;
-  background-color: #BC9CFF;
+  z-index: 100;
+  background-color: #9c1a9c;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -94,7 +95,7 @@
   text-transform: uppercase;
   font-size: 20px;
   font-weight: bold;
-  background-color: #6FCF97;
+  background-color: #ff9900;
   color: #ffffff;
   border-radius: 15px;
   width: 500px;
@@ -103,7 +104,7 @@
 }
 
 .promo-btn:hover {
-  background-color: #BC9CFF;
+  background-color: #9c1a9c;
   -webkit-transition: 0.30s;
   transition: 0.30s;
 }
@@ -173,7 +174,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   padding: 30px;
-  background-color: #BC9CFF;
+  background-color: #9c1a9c;
   border-radius: 50px;
   -webkit-transition: 0.30s;
   transition: 0.30s;
@@ -216,6 +217,58 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.swiper {
+  width: 1000px;
+  height: 550px;
+}
+
+.swiper-slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  justify-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #9c1a9c;
+  opacity: 1;
+  font-family: sans-serif;
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 80px;
+}
+
+.swiper-slide__name {
+  margin-top: 20px;
+}
+
+.swiper-slide__ava {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 220px;
+  height: 220px;
+  border-radius: 50%;
+}
+
+.swiper-slide__feedback {
+  margin-top: 20px;
+  width: 450px;
+}
+
+.slider {
+  height: 730px;
+  padding: 100px;
+  background-color: #ffffff67;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
