--- a/src/pug/includes/head.html
+++ b/src/pug/includes/head.html
@@ -1,1 +1,1 @@
-<head><meta charset="UTF-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><link rel="stylesheet" href="../css/style.css"/></head>
+<head><meta charset="UTF-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><link rel="stylesheet" href="../css/style.css"/><link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/></head>
