--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,5 +8,6 @@ html(lang="en")
     include includes/promo.pug
     include includes/sostav.pug
     include includes/feedback.pug
+    include includes/promopeople.pug
     script(src="https://unpkg.com/swiper@7/swiper-bundle.min.js") 
     script(src="../js/slider.js")
