--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -8,6 +8,8 @@
 @import 'blocks/_sostav'
 //feedback
 @import 'blocks/_feedback'
+//promopeople
+@import 'blocks/_promopeople'
 
 //reset
 @import '_normilize'
