add last block (form for buying products)

--- a/src/pug/includes/promo.pug
+++ b/src/pug/includes/promo.pug
@@ -9,4 +9,5 @@
         li.promo-caracter__item Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, ipsam.
         li.promo-caracter__item Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, ipsam.
         li.promo-caracter__item Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, ipsam.
-    button(id="#" class="promo-btn") Заказать
+    a(href="#buy")  
+              button(class="promo-btn") Заказать
