--- a/src/pug/includes/promopeople.pug
+++ b/src/pug/includes/promopeople.pug
@@ -10,4 +10,5 @@ section.promopeople
             .promopeople-li_item Lorem ipsum dolor sit.
             .promopeople-li_item Lorem ipsum dolor sit.
           .promopeople-btn
-            button(id="#" class="promo-btn") Заказать
+            a(href="#buy")  
+              button(class="promo-btn") Заказать
