--- a/src/pug/includes/sostav.pug
+++ b/src/pug/includes/sostav.pug
@@ -26,4 +26,5 @@ section.sostav-section
             img(src="../img/des.jpg", alt="Element in sostav" class="sostav-item__img")
             .sostav-item__name Lorem ipsum dolor sit amet.
       .sostav-btn
-        button(id="#" class="promo-btn") Заказать
+        a(href="#buy")  
+              button(class="promo-btn") Заказать
