--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -9,5 +9,7 @@ html(lang="en")
     include includes/sostav.pug
     include includes/feedback.pug
     include includes/promopeople.pug
+    include includes/buy.pug
     script(src="https://unpkg.com/swiper@7/swiper-bundle.min.js") 
     script(src="../js/slider.js")
+    script(src="../js/timer.js")
