--- a/src/sass/_settings.sass
+++ b/src/sass/_settings.sass
@@ -2,5 +2,11 @@
   max-width: 1200px
   margin: auto
 
+input
+  outline: none
+  border-radius: 10px
+  border: none
+  padding: 10px
+
 body
   background-color: #141414
