--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -10,6 +10,8 @@
 @import 'blocks/_feedback'
 //promopeople
 @import 'blocks/_promopeople'
+//buy
+@import 'blocks/_buy'
 
 //reset
 @import '_normilize'
