--- a/src/css/style.css
+++ b/src/css/style.css
@@ -114,6 +114,13 @@
   margin: auto;
 }
 
+input {
+  outline: none;
+  border-radius: 10px;
+  border: none;
+  padding: 10px;
+}
+
 body {
   background-color: #141414;
 }
@@ -323,6 +330,109 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.buy {
+  background-color: #ffffff67;
+  font-family: sans-serif;
+  font-size: 30px;
+  color: #ffffff;
+  padding: 100px;
+  padding-top: 190px;
+  padding-bottom: 190px;
+}
+
+.buy-offer {
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  font-size: 15px;
+}
+
+.buy-pricewrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.buy-form__in {
+  margin-bottom: 40px;
+}
+
+.buy-name {
+  text-transform: uppercase;
+  font-size: 50px;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+.buy-block {
+  width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.buy-price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: 200px;
+}
+
+.buy-price__old {
+  text-decoration: line-through;
+  -webkit-text-decoration-color: red;
+          text-decoration-color: red;
+  color: #ffffff67;
+  margin-right: 5px;
+  font-size: 20px;
+}
+
+.buy-price__new {
+  margin-bottom: 20px;
+}
+
+.buy-timer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 100px;
+}
+
+.buy-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.buy-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
