--- a/src/sass/blocks/_media.sass
+++ b/src/sass/blocks/_media.sass
@@ -10,8 +10,6 @@
       width: 1024px
       padding-right: 0
       padding-left: 0
-    &-video
-      min-width: 600px !important
   .swiper
     width: 800px
   .promopeople
@@ -23,3 +21,5 @@
   .buy
     &-price
       margin-left: 100px
+  body
+    width: 1024px !important
