--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,7 +4,7 @@ html(lang="en")
     title LevelUp
   body  
     .promo-shadow
-      video(src="../img/Pills.mp4" autoplay="autoplay"  loop   class="promo-video") 
+      video(src="../img/Pills.mp4" autoplay="autoplay"  loop width="1024"  class="promo-video") 
     include includes/promo.pug
     include includes/sostav.pug
     include includes/feedback.pug
